--- a/events.html
+++ b/events.html
@@ -52,16 +52,99 @@
                             <td>5 April 2024</td>
                             <td>Unveiling the Path Integral Formalism - A Journey into Quantum Mechanics</td>
                             <td>Deepak Kumar Sharma</td>
-                            <td><a href="Images/events_images/talks_poster/path_integral.jpg" download="path_integral.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                            <td><a href="/Images/events_images/talks_poster/path integral.jpg" download="path integral.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>29 March 2024</td>
                             <td>A deeper understanding of plasma sheaths</td>
                             <td>Ashutosh Nayak</td>
-                            <td><a href="Images/events_images/talks_poster/measuremet_of_electric_field.jpg" download="measuremet_of_electric_field.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                            <td><a href="/Images/events_images/talks_poster/measuremet ofelectric field.jpg" download="measuremet ofelectric field.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
                         </tr>
-                        <!-- Add more rows as needed -->
+                        <tr>
+                            <td></td>
+                            <td>22 March 2024</td>
+                            <td>The Hunt for Imaginary Energies</td>
+                            <td>Sarbajit Mazumdar</td>
+                            <td><a href="/Images/events_images/talks_poster/hunt for imaginary energies.jpg" download="hunt for imaginary energies.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>9 February 2024</td>
+                            <td>Neural network in physics</td>
+                            <td>Abhishek Singh</td>
+                            <td><a href="/Images/events_images/talks_poster/Neural Networks in physics.jpg" download="Neural Networks in physics.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>29 January 2024</td>
+                            <td>Star formation in NGC 7469/IC 5283 interacting galaxies</td>
+                            <td>Abhinna Sundar Samantaray</td>
+                            <td><a href="/Images/events_images/talks_poster/interacting galaxy.jpg" download="interacting galaxy.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>19 January 2024</td>
+                            <td>Mathematics of General Relativity</td>
+                            <td>Tanush Reddy Vaka</td>
+                            <td><a href="/Images/events_images/talks_poster/mathematics of General relativity.jpg" download="mathematics of General relativity.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>12 January 2024</td>
+                            <td>Topological phases of matter</td>
+                            <td>Rishi Paresh Joshi</td>
+                            <td><a href="/Images/events_images/talks_poster/Topological phases of matter.pdf" download="Topological phases of matter.pdf"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>5 January 2024</td>
+                            <td>Investigation on Metamaterails for Beam Diagonistics Application</td>
+                            <td>Pritipriya Deshbehera</td>
+                            <td><a href="/Images/events_images/talks_poster/metamaterials.jpg" download="metamaterials.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>11 November 2023</td>
+                            <td>An Approach to Non Perturbative Calculation of Propagators in Quantum Mechanic</td>
+                            <td>Arif Sarkar</td>
+                            <td><a href="/Images/events_images/talks_poster/non perturbative calculation of propagotors.jpg" download="non perturbative calculation of propagotors.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>10 November 2023</td>
+                            <td>Presenting Low Gain Avalanche Diodes (LGADs) as detectors for future HEP experiments</td>
+                            <td>Saptarshi Datta</td>
+                            <td><a href="/Images/events_images/talks_poster/Lgads into ultra fast silicon.jpg" download="Lgads into ultra fast silicon.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>13 October 2023</td>
+                            <td>Spontaneously Broken Time Translation Symmetry</td>
+                            <td>Sajag Kumar</td>
+                            <td><a href="/Images/events_images/talks_poster/Time Crystals Spontaneously Broken Time Translation Symmetry.jpg" download="Time Crystals Spontaneously Broken Time Translation Symmetry.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>6 October 2023</td>
+                            <td>The Tale of Torsion</td>
+                            <td>Deepak Kumar Sharma</td>
+                            <td><a href="/Images//events_images/talks_poster/tale of torsion.jpg" download="tale of torsion.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>1 October 2023</td>
+                            <td>Introduction to The Bead in a Rotating Hoop Problem</td>
+                            <td>Sayandip Sahu and Dipendu Bar</td>
+                            <td><a href="/Images/events_images/talks_poster/bead on a rotating hoop.jpg" download="bead on a rotating hoop.jpg"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>10 September 2023</td>
+                            <td>A Boundary Element Approach to Fracture Mechanics</td>
+                            <td>Ratul Das</td>
+                            <td><a href="/Images/events_images/talks_poster/fracture dynamics.png" download="fracture dynamics.png"><i class="fa-solid fa-file-pdf">Download</i></a></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
