--- a/index.html
+++ b/index.html
@@ -54,33 +54,32 @@
         <div class="members">
             <div class="President">
                 <h2>President</h2>
-                <p>Dipendu Bar</p>
+                <p>Sayandeep Sahoo</p>
             </div>
 
             <div class="Convener">
                 <h2>Convener</h2>
-                <p>Aman Gupta</p>
+                <p>Alan Ajay</p>
             </div>
 
             <div class="Outreach">
                 <h2>Outreach</h2>
-                <p>Arka Ghosh</p>
+                <p>Pratik Chandra<br>Nath</p>
             </div>
 
             <div class="Treasurer">
                 <h2>Treasurer</h2>
-                <p>Roshan Matthew<br> Philip</p>
+                <p>Dadhichi Das</p>
             </div>
 
             <div class="FIC">
                 <h2>Faculty In Charge</h2>
-                <p>Dr.Amaresh Jaiswal</p>
+                <p>Dr. Amaresh Jaiswal</p>
             </div>
-
         </div>
-
     </div>
 </div>
+
     
 
 <!--__________________________________Events_______________________________________________-->
